gccida/c2/decompose
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/decompose/src/reload.c:2683:25: error: conflicting types for 'decompose'
 struct decomposition * decompose(  struct decomposition *retstr, rtx x) 
                        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/decompose/src/reload.c:254:29: note: previous declaration is here
static struct decomposition decompose PARAMS ((rtx));
                            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/decompose/src/reload.c:2713:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v31; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/decompose/src/reload.c:2772:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v14 = ( ( unsigned int)( mode_class_0[( unsigned __int8)v12] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/decompose/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/decompose/src/reload.c:2804:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v15.rtwint = ( __int64)v4->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/decompose/src/reload.c:2808:18: error: expected expression
rtwint = *( rtx *)( v15.rtwint + 8); 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/decompose/src/reload.c:2831:18: error: expected expression
rtwint = *( rtx *)( v15.rtwint + 8); 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/decompose/src/reload.c:2832:24: error: expected expression
if ( rtwint == *( rtx *)( v19 + 8) ) 
                       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/decompose/src/reload.c:2847:15: error: expected expression
rtx = *( rtx *)( v15.rtwint + 8); 
              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/decompose/src/reload.c:2853:18: error: expected expression
rtwint = *( rtx *)( v15.rtwint + 16); 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/decompose/src/reload.c:2862:18: error: expected expression
rtwint = *( rtx *)( v15.rtwint + 8); 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/decompose/src/reload.c:2863:15: error: expected expression
rtx = *( rtx *)( v15.rtwint + 16); 
              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/decompose/src/reload.c:2875:16: error: expected ';' after expression
rtwint = ( rtx)v15.rtwint; 
               ^
               ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/decompose/src/reload.c:2890:34: error: use of undeclared identifier 'machine_mode'
rtwint = gen_rtx_fmt_ee( PLUS, ( machine_mode)*( ( unsigned __int8 *)rtwint + 2), rtwint, *( rtx *)&rtx[1]); 
                                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/decompose/src/reload.c:2890:99: error: expected expression
rtwint = gen_rtx_fmt_ee( PLUS, ( machine_mode)*( ( unsigned __int8 *)rtwint + 2), rtwint, *( rtx *)&rtx[1]); 
                                                                                                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/decompose/src/reload.c:2898:13: error: expected ';' after expression
rtx = ( rtx)rtx[1]; 
            ^
            ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/decompose/src/reload.c:2910:34: error: use of undeclared identifier 'machine_mode'
rtwint = gen_rtx_fmt_e( CONST, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)rtwint), rtwint); 
                                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/decompose/src/reload.c:2910:49: error: expected expression
rtwint = gen_rtx_fmt_e( CONST, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)rtwint), rtwint); 
                                                ^
17 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/decompose/src/obj/reload.o] Error 1
